k8s/minikube/core-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
  labels:
    app: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
      - name: core
        image: detours/core-api:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /test
            port: 5000
          initialDelaySeconds: 60
          periodSeconds: 10
