k8s/minikube/core-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: core-api
  labels:
    app: core-api
spec:
  type: NodePort
  selector:
    app: core-api
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
